Added AWS blogs

--- a/docs/create/aws/slackbot/index-slackbot.mdx
+++ b/docs/create/aws/slackbot/index-slackbot.mdx
@@ -660,6 +660,7 @@ To discover more about his work and his activity on GitHub, you can [check out h
 
 ### References
 
-- [Create Redis database on AWS](/create/aws/awsportal) 
-
+- [Create Redis database on AWS](/create/aws/redis-on-aws) 
+- [Connecting to the database using RedisInsight](/explore/redisinsight/)
+- [How to list & search Movies database using Redisearch](/howtos/moviesdatabase/getting-started/)
 
