adding what-is-redis

--- a/docs/explore/index-explore.mdx
+++ b/docs/explore/index-explore.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-explore
 title: Explore Your Data
-sidebar_label: Overview 
+sidebar_label: Overview
 slug: /explore
 ---
 
@@ -12,12 +12,20 @@ import RedisCard from '@site/src/theme/RedisCard';
 The following links provides you with the available options to explore a new Redis database either on the Cloud or using local software.
 
 <div class="row">
-
+    <div class="col">
+        <RedisCard
+            title="What is Redis"
+            imgPath="redisinsight.png"
+            description="Redis in-memory database. How it works and why you should use it."
+            preview="redisinsight.png"
+            page="/explore/what-is-redis"
+            />
+    </div>
  <div class="col">
-     <RedisCard 
-        title="RedisInsight" 
+     <RedisCard
+        title="RedisInsight"
         imgPath="redisinsight.png"
-        description="An intuitive and efficient GUI for Redis" 
+        description="An intuitive and efficient GUI for Redis"
         preview="redisinsight.png"
         page="/explore/redisinsight"
         />
@@ -25,12 +33,16 @@ The following links provides you with the available options to explore a new Red
 
 
  <div class="col">
-    <RedisCard 
-        title="Redis Datasource for Grafana" 
-        description="An out-of-the-box predefined build Grafana dashboard for Redis" 
+    <RedisCard
+        title="Redis Datasource for Grafana"
+        description="An out-of-the-box predefined build Grafana dashboard for Redis"
         page="/explore/redisdatasource"
         />
  </div>
+
+</div>
+
+<div class="row">
 
  <div class="col">
     <RedisCard
@@ -40,21 +52,14 @@ The following links provides you with the available options to explore a new Red
         />
  </div>
 
-</div>
-
-<div class="row">
-
  <div class="col">
-    <RedisCard 
-        title="RIOT" 
-        description="A set of import/export command line utilities for Redis" 
+    <RedisCard
+        title="RIOT"
+        description="A set of import/export command line utilities for Redis"
         page="/explore/riot"
         />
  </div>
 
- 
- 
+
+
 </div>
-
-
-
