--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -13,7 +13,7 @@ The following links provide you with the available options to run apps on Heroku
  <div class="col">
      <RedisCard
         title="AWS Portal"
-        description="Create a Redis database on Heroku"
+        description="Create a Redis database on AWS"
         page="/create/aws/redis-on-aws"
         />
  </div>
