Minor: link fix

--- a/docs/develop/java/spring/redis-om/index-redis-om-spring-json.mdx
+++ b/docs/develop/java/spring/redis-om/index-redis-om-spring-json.mdx
@@ -129,7 +129,7 @@ public class RomsDocumentsApplication {
 
 ## 🚀 Launch Redis
 
-Redis OM Spring relies on the power of the [RediSearch][https://redisearch.io/] and [RedisJSON][https://redisjson.io] modules.
+Redis OM Spring relies on the power of the [RediSearch](https://redisearch.io/) and [RedisJSON](https://redisjson.io) modules.
 The docker compose YAML file below can get started quickly. You can place at the root folder of your project and name it
 `docker-compose.yml`:
 
