Add AWS and Terraform Tutorial

--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -24,4 +24,13 @@ The following links provide you with the available options to run apps on Heroku
         page="/create/aws/slackbot"
         />
  </div>
+ <div class="col">
+    <RedisCard
+        title="How to Deploy and Manage Redis Database on AWS Using Terraform"
+        description="Deploy and Manage Redis Database on AWS Using Terraform"
+        page="/create/aws/terraform"
+        />
+ </div>
+ 
+
  </div>
