--- a/docs/create/aws/terraform/index-terraform.mdx
+++ b/docs/create/aws/terraform/index-terraform.mdx
@@ -23,7 +23,7 @@ Terraform is an open source IaC software tool that provides a consistent CLI wor
 - It provides a single unified syntax, instead of requiring operators to use independent and non-interoperable tools for each platform and service.
 - Manages both existing service providers and custom in-house solutions.
 - Terraform is easily portable to any other provider.
-- Provides immutable infrastructure where configuration changes smoothly
+- Provides immutable infrastructure where configuration changes smoothly.
 - Supports client-only architecture, so no need for additional configuration management on a server.
 - Terraform is very flexible, using a plugin-based model to support providers and provisioners, giving it the ability to support almost any service that exposes APIs.
 - It is not intended to give low-level programmatic access to providers, but instead provides a high-level syntax for describing how cloud resources and services should be created, provisioned, and combined.
