--- a/docs/create/aws/terraform/index-terraform.mdx
+++ b/docs/create/aws/terraform/index-terraform.mdx
@@ -145,7 +145,7 @@ Use Homebrew to install terraform on MacOS as shown below:
  brew install terraform
 ```
 
-### Step 2: Sign up for a free Red Enterprise Cloud account
+### Step 2: Sign up for a free Redis Enterprise Cloud account
 
 Sign up for your free Redis Enterprise Cloud account. Once you click on “Get Started,” you will receive an email with a link to activate your account and complete the sign-up process.
 
