--- a/docs/create/aws/terraform/index-terraform.mdx
+++ b/docs/create/aws/terraform/index-terraform.mdx
@@ -432,7 +432,7 @@ You can now verify the new database created under Subscription named “db-json.
 
 
 
-Deploy Redis Database with RedisJSON modules on AWS using Terraform
+Deploy a Redis Database with RedisJSON modules on AWS using Terraform:
 
 
 ```
