--- a/docs/create/aws/terraform/index-terraform.mdx
+++ b/docs/create/aws/terraform/index-terraform.mdx
@@ -329,7 +329,7 @@ Note: You didn't use the -out option to save this plan, so Terraform can't guara
 
 ### Step 8: Execute the action
 
-The terraform apply command executes the actions proposed in a Terraform plan.
+The Terraform apply command executes the actions proposed in a Terraform plan.
 
 
 ```
