--- a/docs/create/aws/terraform/index-terraform.mdx
+++ b/docs/create/aws/terraform/index-terraform.mdx
@@ -129,7 +129,7 @@ Please note that Flexible and Annual Redis Enterprise Cloud subscriptions can le
 ```
 
 
-### Prerequisite:
+### Prerequisites:
 
 - Install Terraform on your MacOS.
 - Create a free Redis Enterprise Cloud account.
