--- a/docs/create/aws/terraform/index-terraform.mdx
+++ b/docs/create/aws/terraform/index-terraform.mdx
@@ -131,7 +131,7 @@ Please note that Flexible and Annual Redis Enterprise Cloud subscriptions can le
 
 ### Prerequisites:
 
-- Install Terraform on your MacOS.
+- Install Terraform on MacOS.
 - Create a free Redis Enterprise Cloud account.
 - Create your first subscription.
 - Enable API
