--- a/docs/create/aws/terraform/index-terraform.mdx
+++ b/docs/create/aws/terraform/index-terraform.mdx
@@ -137,7 +137,7 @@ Please note that Flexible and Annual Redis Enterprise Cloud subscriptions can le
 - Enable API
 
 
-### Step 1: Install Terraform on your MacOS
+### Step 1: Install Terraform on MacOS
 
 Use Homebrew to install terraform on MacOS as shown below:
 
