--- a/docs/create/aws/terraform/index-terraform.mdx
+++ b/docs/create/aws/terraform/index-terraform.mdx
@@ -139,7 +139,7 @@ Please note that Flexible and Annual Redis Enterprise Cloud subscriptions can le
 
 ### Step 1: Install Terraform on MacOS
 
-Use Homebrew to install terraform on MacOS as shown below:
+Use Homebrew to install Terraform on MacOS as shown below:
 
 ```
  brew install terraform
