--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-windows
-title: Create Redis database on Microsoft Windows 10 
+title: How to Install Redis on Windows 10 
 sidebar_label: Redis on Windows
 slug: /create/windows
 authors: [ajeet]
