--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-docker
-title: How to Deploy and Run Redis on Docker
+title: How to Deploy and Run Redis in a Docker container
 sidebar_label: Redis on Docker
 slug: /create/docker/
 authors: [ajeet]
