Fixed the title of this tutorial

--- a/docs/explore/what-is-redis/index-what-is-redis.mdx
+++ b/docs/explore/what-is-redis/index-what-is-redis.mdx
@@ -1,8 +1,7 @@
 ---
 id: index-what-is-redis
-title: Redis in-memory database. How it works and why you should use it.
+title: 'Redis:In-memory database. How it works and Why you should use it?'
 description: Redis is an open source, in-memory data store that delivers sub-millisecond response times and is used as a database, cache, message broker, and queue.
-hide_title: true
 sidebar_label: What is Redis?
 slug: /explore/what-is-redis
 authors: [will]
@@ -23,17 +22,17 @@ Redis is an open source, in-memory, key-value data store most commonly used as a
 
 ### Redis Anywhere
 
-Redis Enterprise is the only true datastore built for hybrid and multi-cloud applications. [Get started with Redis Enterprise Cloud](https://developer.redis.com/create/rediscloud).
+Redis Enterprise is the only true datastore built for hybrid and multi-cloud applications. [Get started with Redis Enterprise Cloud](/create/rediscloud).
 
 ### Redis on AWS
 
-You might be familiar with Amazon ElastiCache for Redis. It is a Redis-compatible cache service that is available on AWS. Redis Enterprise Cloud on AWS is a fully-managed Redis Enterprise as a service and supports Redis as a cache and a database. Learn more about [Redis on AWS](https://developer.redis.com/create/aws/redis-on-aws).
+You might be familiar with Amazon ElastiCache for Redis. It is a Redis-compatible cache service that is available on AWS. Redis Enterprise Cloud on AWS is a fully-managed Redis Enterprise as a service and supports Redis as a cache and a database. Learn more about [Redis on AWS](/create/aws/redis-on-aws).
 
 ### Redis on Other Cloud Providers
 
-- [Redis on Google Cloud](https://developer.redis.com/create/gcp)
-- [Redis on Azure](https://developer.redis.com/create/azure)
-- [Redis on Heroku](https://developer.redis.com/create/heroku)
+- [Redis on Google Cloud](/create/gcp)
+- [Redis on Azure](/create/azure)
+- [Redis on Heroku](/create/heroku)
 
 ## Benefits of Redis
 
@@ -149,4 +148,4 @@ You can [sign up for Redis Enterprise Cloud](https://redis.com/try-free/) for fr
 
 ## Getting Started with Redis
 
-If you are ready to start building applications using Redis check out our [tutorials for Redis](https://developer.redis.com/develop) that let you use your programming language of choice!
+If you are ready to start building applications using Redis check out our [tutorials for Redis](/develop) that let you use your programming language of choice!
