--- a/docs/explore/what-is-redis/index-what-is-redis.mdx
+++ b/docs/explore/what-is-redis/index-what-is-redis.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-what-is-redis
-title: 'Redis:In-memory database. How it works and Why you should use it?'
+title: 'Redis:In-memory database. How it works and Why you should use it'
 description: Redis is an open source, in-memory data store that delivers sub-millisecond response times and is used as a database, cache, message broker, and queue.
 sidebar_label: What is Redis?
 slug: /explore/what-is-redis
