--- a/docs/create/jenkins/index-jenkins.mdx
+++ b/docs/create/jenkins/index-jenkins.mdx
@@ -326,7 +326,7 @@ Congratulations! You have deployed a Redis Enterprise database using a Jenkins P
 The GitHub repository is currently: [https://github.com/masyukun/redis-jenkins-pipeline](https://github.com/masyukun/redis-jenkins-pipeline)
 
 
-### Further Read
+### Further Reading
 
 
 
