--- a/docs/create/jenkins/index-jenkins.mdx
+++ b/docs/create/jenkins/index-jenkins.mdx
@@ -331,5 +331,5 @@ The GitHub repository is currently: [https://github.com/masyukun/redis-jenkins-p
 
 
 - [How to Embed Redis into Your CI-CD Process](https://redis.com/blog/how-to-embed-redis-into-your-continuous-integration-and-continuous-deployment-ci-cd-process/)
-- [Top Redis Headache for DevOps](https://redis.com/blog/top-redis-headaches-for-devops-replication-timeouts/)
+- [Top Redis Headaches for DevOps](https://redis.com/blog/top-redis-headaches-for-devops-replication-timeouts/)
 - [Top 5 Reasons why DevOps Love Redis Enterprise ](https://redis.com/blog/why-devops-teams-love-redis-enterprise/)
