--- a/docs/create/jenkins/index-jenkins.mdx
+++ b/docs/create/jenkins/index-jenkins.mdx
@@ -281,7 +281,7 @@ Click "Save" when the job spec is complete.
 
 ### Run the Jenkins pipeline
 
-Click on the pipeline you created
+Click on the pipeline you created:
 
 
 
