--- a/docs/create/aws/import/index-database-migration-aws-elasticache-redis-enterprise-cloud.mdx
+++ b/docs/create/aws/import/index-database-migration-aws-elasticache-redis-enterprise-cloud.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-database-migration-aws-elasticache-redis-enterprise-cloud
-title: How to migrate database from AWS ElastiCache to Redis without any downtime
+title: How to migrate your database from AWS ElastiCache to Redis without any downtime
 sidebar_label: Online Data Migration from AWS Elasticache to Redis 
 slug: /create/aws/import/database-migration-aws-elasticache-redis-enterprise-cloud/
 authors: [ajeet]
