--- a/docs/create/aws/import/index-database-migration-aws-elasticache-redis-enterprise-cloud.mdx
+++ b/docs/create/aws/import/index-database-migration-aws-elasticache-redis-enterprise-cloud.mdx
@@ -26,7 +26,7 @@ This blog post will show how to perform a seamless online migration of databases
 
 You will require a few resources to use the migration tool:
 
-- A Redis Enterprise Cloud subscription
+- A Redis Enterprise Cloud subscription, sign up [here](https://redis.com/try-free/)
 - Amazon ElastiCache (a primary endpoint in case of a single-master EC and a configuration endpoint in case of a clustered EC: Refer to Finding Connection Endpoints on the ElastiCache documentation to learn more)
 - An Amazon EC2 instance based on Linux
 
